added libraries (choices.js for custom selects and swiper for sliders), images, icons and other for header and 'special' section. collapse the header-top block. selects and sliders is configured (js)

--- a/package.json
+++ b/package.json
@@ -50,5 +50,8 @@
     "style-loader": "^3.3.3",
     "swiper": "^10.0.4",
     "webpack-stream": "^7.0.0"
+  },
+  "dependencies": {
+    "choices.js": "^10.2.0"
   }
 }
