--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "webpack-stream": "^7.0.0"
   },
   "dependencies": {
-    "choices.js": "^10.2.0"
+    "choices.js": "^10.2.0",
+    "inputmask": "^5.0.8",
+    "just-validate": "^4.2.0"
   }
 }
