added new scripts, imgs and other. also added and changed html files

--- a/package.json
+++ b/package.json
@@ -43,9 +43,12 @@
     "gulp-sass": "^5.1.0",
     "gulp-svg-sprite": "^2.0.3",
     "gulp-svgmin": "^4.1.0",
+    "gulp-uglify": "^3.0.2",
     "gulp-webp": "^4.0.1",
     "node-w3c-validator": "^2.0.2",
+    "nouislider": "^15.7.1",
     "prettier": "^3.0.0",
+    "redom": "^3.29.1",
     "sass": "^1.63.6",
     "style-loader": "^3.3.3",
     "swiper": "^10.0.4",
