--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "html": "node-w3c-validator -f lint -evH -i app/**/*.html",
     "dev": "gulp",
-    "build": "gulp build"
+    "build": "gulp build",
+    "deploy": "gulp build && gh-pages -d build"
   },
   "repository": {
     "type": "git",
@@ -32,6 +33,7 @@
     "gulp-cheerio": "^1.0.0",
     "gulp-clean-css": "^4.3.0",
     "gulp-file-include": "^2.3.0",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-htmlmin": "^5.0.1",
     "gulp-if": "^3.0.0",
     "gulp-imagemin": "^7.1.0",
